Thu May 20 12:34:39 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::RubyParser::parse_visibility): 
	  At Ryan Davis' suggestion, honor visibility modifers if guarded by a
	  statement modifier

Thu May 20 12:22:13 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_type): do not check pointer to incomplete type,
	  which always get compiled.
	  [ruby-list:39683]

Wed May 19 23:45:43 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/inlinetest.rb (InlineTest::loadtest): requiring library with
	  replaced $0 can make $0 == __FILE__ block be evaluated twice.

	* test/ruby/envutil.rb (EnvUtil::rubybin): give priority to
	  environment variable.  [ruby-dev:23538]

Wed May 19 11:08:10 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: change permition of TkObject#tk_send from
	  private to public

Wed May 19 02:29:36 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: support TRACE.

Wed May 19 02:21:53 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: do not use class variables.

Tue May 18 21:21:43 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/csv.rb: writes lines with "\n" when row separator is not given.
	  formerly it was "\r\n".

	* lib/csv.rb: [CAUTION] API change

	  * CSV::Row removed.  a row is represented as just an Array.  since
	    CSV::Row was a subclass of Array, it won't hurt almost all programs
	    except one which depended CSV::Row#match.

	  * CSV::Cell removed.  a cell is represented as just a String or
	    nil(NULL).  this change will cause widespread destruction.

      	      CSV.open("foo.csv", "r") do |row|
		row.each do |cell|
		  if cell.is_null       # Cell#is_null
		    p "(NULL)"
		  else
		    p cell.data         # Cell#data
		  end
		end
	      end

	    must be just;

	      CSV.open("foo.csv", "r") do |row|
		row.each do |cell|
		  if cell.nil?
		    p "(NULL)"
		  else
		    p cell
		  end
		end
	      end
