@@ -354,6 +354,8 @@ freebsd*)	LIBS="-lm $LIBS"
 		;;
 bow)		ac_cv_func_setitimer=no
 		;;
+superux*)     ac_cv_func_setitimer=no
+              ;;
 *) LIBS="-lm $LIBS";;
 esac
 AC_CHECK_LIB(crypt, crypt)
